Updated name to Native Alpha++ as to not clash with actual Native Alpha+